# telegram_game

./: .dockerignore  .gitignore  .pre-commit-config.yaml.template  Dockerfile  LICENSE.txt  README.md  Taskfile.yml  build_version  build_version.bak  event.json  my_install.sh  pyproject.toml  requirements-dev.txt  start.py
logger/: custom.py
logger/logging_config/: config.yaml  custom_config.yaml
src/config/: builder.py  constants.py  get_name.py  logger.py  project_info.py  settings.py  words.py
src/domain/entity/: base.py  card.py  game.py  team.py  user.py
src/domain/utils/: color.py  role.py  status.py
src/domain/value_object/: base.py  score.py
src/infrastructure/card/: team_words.py
src/infrastructure/game/: create.py  round.py
src/scenarios/: create_team.py
src/scenarios/card/: shuffle.py  team_words.py
src/scenarios/game/: create.py
src/scenarios/team/: create_team.py
src/use_cases/card/: shuffle.py  team_words.py
src/use_cases/game/: create.py  round.py
src/use_cases/team/: create_team.py
tests/: conftest.py  test_team.py
tests/logger/: test_logger.py
tests/scenarions/card/: test_round.py  test_shuffle.py
tests/scenarions/game/: test_create.py
tests/use_cases/card/: test_round.py  test_shuffle.py
tests/use_cases/game/: test_create.py
