[project]
name = "telegram_game"
version = "0.1.0"
requires-python = ">= 3.11"
authors = [
    {name = "Anton Zimin", email = "zimkaa87@gmail.com"},
]
description = "Test project"
readme = "README.md"
license = {file = "LICENSE.txt"}
dependencies = [
    "pydantic-settings >= 2.2.1",
    "pydantic >= 2.6.4",
]

[project.optional-dependencies]
dev = [
    "ruff >= 0.1.9",
    "mypy >= 1.8.0",
    "pytest >= 7.4.3",
    "pylint >= 3.0.3",
    "pre-commit >= 3.6.0",
]

[tool.poetry]
name = "telegram_game"
version = "0.1.0"
description = ""
authors = ["Anton Zimin <zimkaa87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.1.1"
pylint = "^3.0.3"
pre-commit = "^3.6.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv"
cache_dir = "/tmp/pytest_cache"
testpaths = [
    "tests",
]

[tool.ruff]
cache-dir = "/tmp/ruff_cache"
fix = true
line-length = 120
unsafe-fixes = true
exclude = [
    "alembic/",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",  # docstring
    "D203",  # docstring
    "D213",  # docstring
    "S101",  # use of assert
    "ANN101",  # self annotation
    "TRY401",  # exeption logging
    # "FA102",  # from __future__ import annotations
    # projec specific
    "TD002",
    "TD003",
    "FIX002",
]
exclude = [
    "get_file_id_for_bot.py",
    "src/telegram/templates/text.py",
    "src/telegram/base/custom_filters/callback_filter.py"
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = ["src"]
known-local-folder = ["src"]
lines-after-imports = 2
force-single-line = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN101", "S101", "S311"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
cache_dir = "/tmp/mypy_cache"
ignore_missing_imports = true
strict = false
exclude = ["~/.pyenv/*", ".venv/", "alembic/"]

[tool.pyright]
ignore = ["server"]
